--- a/assets/style.css
+++ b/assets/style.css
@@ -1,27 +1,42 @@
-body{
-    margin-top:-1px;
-    margin-bottom:-1px; 
+body {
+    margin-top: -1px;
+    margin-bottom: -1px;
     font-family: "Raleway";
     font-weight: 200;
     background-color: white;
 }
-div{
+
+div {
     position: relative;
 }
-h6{
+
+h6 {
     font-size: 2.7vw;
 }
-h7{
+
+h7 {
     font-size: 2.3vw;
     display: block;
 }
-ul, p {
-    margin-top:-1px;
+
+ul,
+p {
+    margin-top: -1px;
 }
-a{
+
+a {
     text-decoration: none;
 }
-blockquote{
+
+a.current_project {
+    color: #b97ad4;
+}
+
+a.current_project:hover {
+    color: #d9c1e2;
+}
+
+blockquote {
     padding: 30px 30px 30px 30px;
     background: #fff;
     border-left: 2px solid #F5E1FD;
@@ -30,24 +45,27 @@ blockquote{
     letter-spacing: 1px;
     color: rgb(94, 94, 94);
 }
-.w3-bar{
+
+.w3-bar {
     letter-spacing: 4px;
     background-color: #F5E1FD;
 }
+
 .w3-right {
     margin-top: 15px;
     font-size: 15px;
     letter-spacing: 1px;
 }
 
-a.w3-bar-item:hover{
-    color:#b97ad4;
+a.w3-bar-item:hover {
+    color: #b97ad4;
     transition: color .25s
 }
 
-.Intro{
+.Intro {
     margin-top: 13vh;
 }
+
 .primary-btn {
     background: #F5E1FD;
     line-height: 42px;
@@ -60,176 +78,270 @@ a.w3-bar-item:hover{
     position: relative;
     font-weight: bold;
     letter-spacing: 1px;
-
 }
-button.primary-btn:hover{
+
+button.primary-btn:hover {
     background: #b97ad4;
     color: #F5E1FD;
     cursor: pointer;
     transition: ease-in .2s;
 }
 
-
 #section {
     padding-top: 100px;
     padding-bottom: 40px;
 }
-#code{
-    font-family:consolas;
+
+#code {
+    font-family: consolas;
     color: #aa65aa;
     overflow: hidden;
 }
-#grey{
-    color:#353535;
+
+#grey {
+    color: #353535;
 }
-#purple{
-    color:#851c85;
+
+#purple {
+    color: #851c85;
 }
-#blue{
-    color:#65a9c9;
+
+#blue {
+    color: #65a9c9;
 }
-#string{
+
+#string {
     color: rgb(90, 90, 170);
 }
-#string:hover{
-    color:rgb(154, 154, 211);
+
+#string:hover {
+    color: rgb(154, 154, 211);
     cursor: pointer;
 }
-#intro{
+
+#intro {
     padding-top: 60px;
 }
-#about{
-    padding-top:60px;
-    
+
+#about {
+    padding-top: 60px;
 }
-#photo{
+
+#photo {
     margin-left: auto;
     margin-right: 0;
 }
 
-.css-typing
-{   
+.css-typing {
     font-family: "Courier";
     font-size: 14px;
     width: 50em;
-    white-space:nowrap;
-    overflow:hidden;
+    white-space: nowrap;
+    overflow: hidden;
     -webkit-animation: type 1s steps(40, end);
     animation: type 1s steps(40, end);
 }
 
-.css-typing:nth-child(2)
-{
-    white-space:nowrap;
-    overflow:hidden;    
-    opacity:0;
+.css-typing:nth-child(2) {
+    white-space: nowrap;
+    overflow: hidden;
+    opacity: 0;
     -webkit-animation: type 1s steps(40, end);
     animation: type2 1s steps(40, end);
-    -webkit-animation-delay: 1s; 
+    -webkit-animation-delay: 1s;
     animation-delay: 1s;
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
 }
-.css-typing:nth-child(3){
-    white-space:nowrap;
-    overflow:hidden;
-    opacity:0;
+
+.css-typing:nth-child(3) {
+    white-space: nowrap;
+    overflow: hidden;
+    opacity: 0;
     -webkit-animation: type 1s steps(40, end);
     animation: type3 1s steps(40, end);
-    -webkit-animation-delay: 2s; 
+    -webkit-animation-delay: 2s;
     animation-delay: 2s;
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
 }
-.css-typing:nth-child(4){
-    white-space:nowrap;
-    overflow:hidden;
-    opacity:0;
+
+.css-typing:nth-child(4) {
+    white-space: nowrap;
+    overflow: hidden;
+    opacity: 0;
     -webkit-animation: type 1s steps(40, end);
     animation: type3 1s steps(40, end);
-    -webkit-animation-delay: 3s; 
+    -webkit-animation-delay: 3s;
     animation-delay: 3s;
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
 }
 
-.css-typing:nth-child(5){
-    white-space:nowrap;
-    overflow:hidden;
-    opacity:0;
+.css-typing:nth-child(5) {
+    white-space: nowrap;
+    overflow: hidden;
+    opacity: 0;
     -webkit-animation: type 1s steps(40, end);
     animation: type3 1s steps(40, end);
-    -webkit-animation-delay: 4s; 
+    -webkit-animation-delay: 4s;
     animation-delay: 4s;
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
 }
- @keyframes type{
-    from { width: 0; }
+
+@keyframes type {
+    from {
+        width: 0;
+    }
 }
 
-@-webkit-keyframes type{
-    from { width: 0; }
+@-webkit-keyframes type {
+    from {
+        width: 0;
+    }
 }
 
-
-@keyframes type2{
-0%{width: 0;}
-from {opacity:0;}
-1%{opacity:1;}
-to{opacity:1;}
-100%{opacity:1;}
+@keyframes type2 {
+    0% {
+        width: 0;
+    }
+    from {
+        opacity: 0;
+    }
+    1% {
+        opacity: 1;
+    }
+    to {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
 }
-@-webkit-keyframes type2{
-0%{width: 0;}
-from {opacity:0;}
-1%{opacity:1;}
-to{opacity:1;}
-100%{opacity:1;}
-}  
-@keyframes type3{
-  0%{width: 0;}
-  from {opacity:0;}
-1%{opacity:1;}
-to{opacity:1;}
-100%{opacity:1;}
 
-} 
-@-webkit-keyframes type3{
-  0%{width: 0;}
-  from {opacity:0;}
-1%{opacity:1;}
-to{opacity:1;}
-100%{opacity:1;}
-} 
+@-webkit-keyframes type2 {
+    0% {
+        width: 0;
+    }
+    from {
+        opacity: 0;
+    }
+    1% {
+        opacity: 1;
+    }
+    to {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 
-@keyframes type4{
-    0%{width: 0;}
-    from {opacity:0;}
-  1%{opacity:1;}
-  to{opacity:1;}
-  100%{opacity:1;}
-  
-  } 
-  @-webkit-keyframes type4{
-    0%{width: 0;}
-    from {opacity:0;}
-  1%{opacity:1;}
-  to{opacity:1;}
-  100%{opacity:1;}
-  } 
-  @keyframes type5{
-    0%{width: 0;}
-    from {opacity:0;}
-  1%{opacity:1;}
-  to{opacity:1;}
-  100%{opacity:1;}
-  
-  } 
-  @-webkit-keyframes type5{
-    0%{width: 0;}
-    from {opacity:0;}
-  1%{opacity:1;}
-  to{opacity:1;}
-  100%{opacity:1;}
-  } 
+@keyframes type3 {
+    0% {
+        width: 0;
+    }
+    from {
+        opacity: 0;
+    }
+    1% {
+        opacity: 1;
+    }
+    to {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes type3 {
+    0% {
+        width: 0;
+    }
+    from {
+        opacity: 0;
+    }
+    1% {
+        opacity: 1;
+    }
+    to {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes type4 {
+    0% {
+        width: 0;
+    }
+    from {
+        opacity: 0;
+    }
+    1% {
+        opacity: 1;
+    }
+    to {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes type4 {
+    0% {
+        width: 0;
+    }
+    from {
+        opacity: 0;
+    }
+    1% {
+        opacity: 1;
+    }
+    to {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes type5 {
+    0% {
+        width: 0;
+    }
+    from {
+        opacity: 0;
+    }
+    1% {
+        opacity: 1;
+    }
+    to {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes type5 {
+    0% {
+        width: 0;
+    }
+    from {
+        opacity: 0;
+    }
+    1% {
+        opacity: 1;
+    }
+    to {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
